# rikugan

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  README.md  ci-local.ps1  ida-plugin.json  install.ps1  install.sh  install_ida.bat  install_ida.sh  llms.txt  plugin.json  pyproject.toml  requirements.txt  rikugan_plugin.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.kilo/: fixing-plan.md
docs/: 2026-06-04-upstream-integration-design.md  CHANGELOG.md  EVALUATION_WORKFLOW.md  FORK_MIGRATION_ASSESSMENT.md  PROJECT_MODIFICATION_PLAN.md  theme-system-VERIFICATION.md
rikugan/: conftest.py  constants.py
rikugan/agent/: bulk_renamer.py  exploration_mode.py  loop.py  loop_commands.py  mutation.py  pseudo_tool_schemas.py  subagent_manager.py  system_prompt.py  turn.py
rikugan/binja/: bootstrap.py
rikugan/core/: config.py  crypto.py  early_log.py  host.py  log_sinks.py  logging.py  sanitize.py  startup_timing.py  thread_safety.py  types.py
rikugan/headless/: runner.py
rikugan/ida/: dispatch.py  headless_bootstrap.py
rikugan/mcp/: client.py
rikugan/memory/: __init__.py  authority.py  backup.py  bundle_export.py  case_schema.py  case_service.py  context.py  identity.py  ingest.py  legacy.py  manager.py  markdown.py  notes.py  paths.py  raw_store.py  registry.py  report.py  repository.py  retrieve.py  schema.py  service.py  sqlite_backend.py  workspace_store.py
rikugan/providers/: anthropic_provider.py  auth_compat.py  base.py  codex_provider.py  gemini_provider.py  minimax_provider.py  ollama_provider.py  openai_compat.py  openai_provider.py  registry.py
rikugan/skills/: loader.py
rikugan/state/: history.py  session.py
rikugan/tests/: test_a2a_dispatcher.py  test_crypto_lazy.py  test_ida_docs_review_prompt.py  test_ida_output_log_level.py  test_idapython_docs_gate.py  test_message_widgets.py  test_qt_import_discipline.py  test_session_restore_sanitization.py  test_settings_dialog_fixes.py  test_string_cache.py  test_token_usage_regression.py
rikugan/tools/: __init__.py  cache.py  catalog.py  formatting.py  functions.py  idapython_complexity.py  idapython_docs.py  registry.py  script_guard.py  string_cache.py  traceback_classifier.py  web.py  xrefs.py
rikugan/ui/: a2a_widget.py  action_handlers.py  agent_tree.py  bulk_renamer.py  chat_view.py  context_bar.py  export_formatting.py  highlight.py  input_area.py  knowledge_panel.py  markdown.py  markdown_renderer.py  message_widgets.py  mutation_log_view.py  oauth_consent.py  orchestra_approval_dialog.py  panel.py  panel_core.py  plan_view.py  profiling.py  qt_compat.py  session_controller_base.py  settings_dialog.py  styles.py  tool_widgets.py  tools_panel.py
scripts/: build_idapython_docs.py
tests/: __init__.py  conftest.py  optional_fixtures.py  qt_stubs.py  test_actions.py  test_build_idapython_docs_integration.py  test_ida_docs_review_prompt.py  test_idapython_docs_tool.py  test_light_theme_widgets.py  test_microcode_optim.py  test_optional_fixtures.py  test_qt_compat.py  test_theme_manager_init_order.py  test_theme_manager_signal.py  test_theme_sync_audit.py  test_tool_modules.py  test_tool_registry_integration.py  test_version_metadata.py
tests/a2a/: test_a2a_http_e2e.py  test_dispatcher.py  test_subprocess_bridge.py  test_subprocess_e2e.py
tests/agent/: test_a2a_loop_integration.py  test_a2a_mode.py  test_agent.py  test_agent_loop.py  test_bulk_renamer.py  test_bulk_renamer_prompts.py  test_exploration_loop.py  test_exploration_mode.py  test_memory_cutover.py  test_memory_write_ownership.py  test_prompt_cutover.py  test_pseudo_tool_schemas.py  test_research_mode.py  test_session_controller.py  test_state.py  test_subagent_manager.py  test_system_prompt.py  test_turn_events.py
tests/core/: test_dependencies.py  test_error_hierarchy.py  test_external_sources.py  test_host.py  test_host_matrix.py  test_logging.py  test_profile.py  test_sanitize.py  test_thread_safety.py
tests/ida_ui/: test_panel_onside_widget.py
tests/memory/: test_authority.py  test_backup.py  test_bundle_export.py  test_case_binding.py  test_case_commands.py  test_case_e2e.py  test_case_integration.py  test_case_schema.py  test_case_service.py  test_config.py  test_first_open_regression.py  test_foundation_gate.py  test_identity.py  test_legacy.py  test_manager.py  test_markdown.py  test_service.py  test_workspace_store.py
tests/mocks/: ida_mock.py
tests/providers/: test_anthropic_provider.py  test_gemini_provider.py  test_ollama_openai_compat.py  test_openai_provider.py  test_provider_adapters.py  test_provider_streaming.py  test_providers.py
tests/scripts/: test_build_idapython_docs.py  test_build_release.py
tests/state/: test_history_async.py
tests/tools/: conftest.py  test_chat_view.py  test_context_bar.py  test_execute_python_widget.py  test_height_cached_label.py  test_highlight_cache.py  test_ida_panel.py  test_ida_panel_theme_reapply.py  test_input_area.py  test_markdown.py  test_mcp.py  test_message_widgets.py  test_microcode_format.py  test_mutation_log_view.py  test_panel_core.py  test_plan_view.py  test_rikugan_plugin.py  test_script_guard.py  test_settings_dialog.py  test_skills.py  (+11 more)
webpage/: ARCHITECTURE.html  docs.html  index.html  llms.txt
(+126 files in other folders)
