[project]
name = "rikugan"
version = "1.10.4"
description = "Agentic LLM reverse-engineering companion embedded directly in IDA Pro."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "buzzer-re" }]
keywords = [
    "ai",
    "llm",
    "agent",
    "reverse-engineering",
    "decompiler",
    "claude",
    "openai",
    "gemini",
    "ollama",
    "mcp",
    "ida",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Disassemblers and Examiners",
]

# Runtime dependencies — kept in sync with ``ida-plugin.json``'s ``pythonDependencies``.
# IDA Pro installs these via pip when the plugin loads; listing them here also lets
# ``uv sync`` provision a working dev environment for provider/agent tests.
dependencies = [
    "anthropic>=0.112.0",
    "openai>=2.0.0",
    "google-genai>=2.0.0",
    "mcp>=1.28.0",
    "ida-domain>=0.5.0",
    "tomli>=2.4.0",
    "cryptography>=49.0.0",
    "requests>=2.31.0",
    "html2text>=2025.4.15",
    "markdown-it-py>=3.0.0",
    "portalocker>=3.0.0,<4",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "RUF"]
ignore = ["E501", "B008", "UP042"]

[tool.ruff.lint.per-file-ignores]
"rikugan/ida/**" = ["F401"]
"rikugan/core/sanitize.py" = ["RUF003"]
"rikugan/ui/plan_view.py" = ["RUF001"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_error_summary = true

# Strict type checking for the security-critical core and provider layers.
[[tool.mypy.overrides]]
module = ["rikugan.core.*", "rikugan.providers.*"]
disallow_untyped_defs = true

# Modules that depend on dynamic ``importlib.import_module`` of optional
# IDA / Qt C-extension packages.  mypy cannot resolve attributes on a
# value typed ``Any | None`` that came from ``importlib.import_module``,
# so these modules produce unavoidable false positives.  We silence the
# noise so the real errors in the rest of the tree remain visible.
#
# To audit: each override is paired with a comment explaining *why* it
# is necessary.  Removing an override without addressing the underlying
# Shiboken-safe import pattern will re-introduce ~450 errors.
[[tool.mypy.overrides]]
# IDA type-inf / Hex-Rays APIs — loaded via ``importlib.import_module`` to
# avoid Shiboken UAF (see core/thread_safety.py docstring).
module = [
    "rikugan.ida.tools.types_tools",
    "rikugan.ida.tools.microcode_format",
    "rikugan.ida.tools.microcode",
    "rikugan.ida.tools.disassembly",
    "rikugan.ida.tools.annotations",
    "rikugan.ida.tools.xrefs",
    "rikugan.ida.tools.decompiler",
    "rikugan.ida.ui.panel",
    "rikugan.ida.ui.actions",
    "rikugan.ida.headless_bootstrap",
]
ignore_errors = true

[[tool.mypy.overrides]]
# PySide6 fallback layer — provides dummy classes when Qt is unavailable,
# and re-exports symbol names that may shadow earlier imports.
module = ["rikugan.ui.qt_compat", "rikugan.ui.message_widgets"]
ignore_errors = true

[[tool.mypy.overrides]]
# Qt widget files that use the standard PySide6 idiom
# ``parent: QWidget | None = None``.  mypy treats this default as
# incompatible because the parameter is declared ``QWidget``.  This
# is the recommended PySide6 pattern (allowing the widget to be a
# top-level window with no parent) and cannot be cleanly expressed
# without ignoring the module.
module = [
    "rikugan.ui.chat_view",
    "rikugan.ui.a2a_widget",
    "rikugan.ui.session_controller_base",
    "rikugan.ui.tool_widgets",
    "rikugan.ui.panel_core",
    "rikugan.ui.mutation_log_view",
    "rikugan.ui.tools_panel",
    "rikugan.ui.settings_dialog",
    "rikugan.ui.plan_view",
    "rikugan.ui.input_area",
    "rikugan.ui.bulk_renamer",
    "rikugan.ui.agent_tree",
    "rikugan.ui.context_bar",
    "rikugan.ui.theme.manager",
    "rikugan.ui.theme.palette_ida",
    "rikugan.ui.tabs.skills_tab",
    "rikugan.ui.tabs.profiles_tab",
    "rikugan.ui.tabs.mcp_tab",
    "rikugan.ida.ui.tools_form",
    "rikugan.ida.tools.registry",
    "rikugan.tools.web_fetch",
    "rikugan.tests.conftest",
]
ignore_errors = true

[[tool.mypy.overrides]]
# ``ida_tools/microcode_optim`` defines dynamic classes from
# user-supplied optimizer code via ``exec(compile(...))``.  The base
# classes cannot be resolved statically because IDA APIs are loaded
# via ``importlib.import_module``.
module = ["rikugan.ida.tools.microcode_optim"]
ignore_errors = true

[[tool.mypy.overrides]]
# Lightweight test fixtures that intentionally re-use real Qt classes in
# places where mypy cannot follow the dynamic attribute access pattern.
module = ["rikugan.tests.test_settings_dialog_fixes"]
ignore_errors = true

[dependency-groups]
dev = [
    "desloppify>=1.0",
    "pyside6>=6.11.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pyyaml>=6.0",
]

